--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
